@@ -49,7 +49,6 @@ import org.powermock.reflect.Whitebox;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -152,8 +151,8 @@ public class FasUsageServiceTest {
         expect(fasUsageRepository.findRightsholdersInformation(scenario.getId()))
             .andReturn(ImmutableMap.of(usage2.getRightsholder().getAccountNumber(), usage2)).once();
         expect(fasUsageRepository.findWithAmountsAndRightsholders(filter)).andReturn(List.of(usage1)).once();
-        expect(prmIntegrationService.getRollUps(Set.of())).andReturn(Collections.emptyMap()).once();
-        expect(prmIntegrationService.getPreferences(Set.of())).andReturn(Collections.emptyMap()).once();
+        expect(prmIntegrationService.getRollUps(Set.of())).andReturn(Map.of()).once();
+        expect(prmIntegrationService.getPreferences(Set.of())).andReturn(Map.of()).once();
         expect(prmIntegrationService.getRhParticipatingServiceFee(false)).andReturn(new BigDecimal("0.32")).once();
         usageRepository.addToScenario(List.of(usage1));
         expectLastCall().once();
